fix: sidebar overflow

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ body {
 	padding: 2rem;
 }
 
+.sidebar{
+	overflow-y: auto;
+}
+
 .notes {
 	padding-inline-start: 0;
 	list-style: none;
